force-app/main/default/objects/Donation_Shipment__c/Donation_Shipment__c.object-meta.xml
<CustomObject>
    <description>This object will record the shipments sent for processing.</description>
    <label>Donation Shipment</label>
    <nameField>
        <displayFormat>DSHIP-{0000}</displayFormat>
        <label>Donation Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>