force-app/main/default/objects/Donation_Shipment__c/fields/Boxes_Used__c.field-meta.xml
<CustomField>
    <fullName>Boxes_Used__c</fullName>
    <description>Total boxes in the shipment</description>
    <inlineHelpText>Total boxes in the shipment</inlineHelpText>
    <label>Boxes Used</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>