force-app/main/default/objects/Donation_Shipment__c/fields/Donation_Processor__c.field-meta.xml
<CustomField>
    <fullName>Donation_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The processor for the shipment.</description>
    <label>Donation Processor</label>
    <referenceTo>Donation_Processor__c</referenceTo>
    <relationshipLabel>Donation Shipments</relationshipLabel>
    <relationshipName>Donation_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>