force-app/main/default/objects/Donation_Shipment__c/fields/Dry_Ice_Cost__c.field-meta.xml
<CustomField>
    <fullName>Dry_Ice_Cost__c</fullName>
    <description>Amount of dry ice used for the whole shipment. If not applicable, type 0.</description>
    <inlineHelpText>Amount of dry ice used for the whole shipment. If not applicable, type 0.</inlineHelpText>
    <label>Dry Ice Cost (Shipment)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>