force-app/main/default/objects/Donation_Shipment__c/fields/Ice_Bags_Used_Per_Box__c.field-meta.xml
<CustomField>
    <fullName>Ice_Bags_Used_Per_Box__c</fullName>
    <description>Number of ice bags 16x16 leak proof bag used in each box</description>
    <inlineHelpText>Number of ice bags 16x16 leak proof bag used in each box</inlineHelpText>
    <label>Ice Bags Used Per Box</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>