force-app/main/default/objects/Donation_Shipment__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>This is the date the shipment was invoiced.</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>