force-app/main/default/objects/Donation_Shipment__c/fields/kPa_Bags_Used_Per_Box__c.field-meta.xml
<CustomField>
    <fullName>kPa_Bags_Used_Per_Box__c</fullName>
    <description>Number of kPa bags used in each box. If not applicable, type 0.</description>
    <inlineHelpText>Number of kPa bags used in each box. If not applicable, type 0.</inlineHelpText>
    <label>kPa Bags Used Per Box</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>