force-app/main/default/objects/Donation_Shipment__c/fields/Shipment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Summary__c</fullName>
    <description>This is the summary info about the shipment.</description>
    <inlineHelpText>This is the summary info about the shipment.</inlineHelpText>
    <label>Shipment Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>