force-app/main/default/objects/Donation_Shipment__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <description>The date the of the shipment.</description>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>