force-app/main/default/objects/Donation_Shipment__c/fields/Shipping_Label_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label_Cost__c</fullName>
    <description>Amount of shipping label for the whole shipment.</description>
    <inlineHelpText>Amount of shipping label for the whole shipment.</inlineHelpText>
    <label>Shipping Label Cost (Shipment)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>