force-app/main/default/objects/Donation_Shipment__c/fields/Total_Amnionic_and_Chorionic_Membrane__c.field-meta.xml
<CustomField>
    <fullName>Total_Amnionic_and_Chorionic_Membrane__c</fullName>
    <description>Total number of amniotic/chorionic membranes shipped</description>
    <inlineHelpText>No. of amniotic/chorionic membranes shipped</inlineHelpText>
    <label>Total Amnionic and Chorionic Membrane</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>