force-app/main/default/objects/Donation_Shipment__c/fields/Total_Amniotic_Membrane__c.field-meta.xml
<CustomField>
    <fullName>Total_Amniotic_Membrane__c</fullName>
    <description>Total number of amniotic membranes shipped</description>
    <inlineHelpText>Total number of amniotic membranes shipped</inlineHelpText>
    <label>Total Amniotic Membrane</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>