force-app/main/default/objects/Donation_Shipment__c/fields/Total_Clients__c.field-meta.xml
<CustomField>
    <fullName>Total_Clients__c</fullName>
    <description>This shows the total number of clients included in this shipment.</description>
    <inlineHelpText>Enter the count of unique clients whose donations are included in this shipment (not the number of boxes or vials).</inlineHelpText>
    <label>Total # of Clients</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>