force-app/main/default/objects/Donation_Shipment__c/fields/Total_Donated_Cord_Blood_Vials__c.field-meta.xml
<CustomField>
    <fullName>Total_Donated_Cord_Blood_Vials__c</fullName>
    <description>Total number of donated cord blood vials shipped</description>
    <inlineHelpText>No. of donated cord blood vials shipped</inlineHelpText>
    <label>Total Donated Cord Blood Vials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>