force-app/main/default/objects/Donation_Shipment__c/fields/Total_Donated_Placenta_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Total_Donated_Placenta_Tissue__c</fullName>
    <description>Total number of donated placenta tissue shipped</description>
    <inlineHelpText>No. of donated placenta tissues</inlineHelpText>
    <label>Total Donated Placenta Tissue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>