force-app/main/default/objects/Donation_Shipment__c/fields/Total_Donated_Umbilical_Cord_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Total_Donated_Umbilical_Cord_Tissue__c</fullName>
    <description>Total number of donated umbilical cord tissue shipped</description>
    <inlineHelpText>No. of donated umbilical cord tissue shipped</inlineHelpText>
    <label>Total Donated Umbilical Cord Tissue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>