force-app/main/default/objects/Donation_Shipment__c/fields/Total_Plasma_Bulk_liters__c.field-meta.xml
<CustomField>
    <fullName>Total_Plasma_Bulk_liters__c</fullName>
    <description>Total amount of plasma bulk shipped in liters</description>
    <inlineHelpText>Amount (in liters) of plasma bulk shipped</inlineHelpText>
    <label>Total Plasma Bulk (liters)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>