force-app/main/default/objects/Donation_Shipment__c/fields/Total_Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipping_Cost__c</fullName>
    <description>Amount of total shipping cost, including necessary shipping supplies</description>
    <label>Total Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>