force-app/main/default/objects/Donation_Shipment__c/fields/Tracking_Info__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Info__c</fullName>
    <description>Carrier tracking numbers</description>
    <inlineHelpText>Enter tracking numbers separated by commas</inlineHelpText>
    <label>Tracking Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>