force-app/main/default/objects/Donation_Shipment__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>This is the tracking number for the shipment.</description>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>